refactor(bracket): improve code organization and sorting in BracketController
The refactoring extracts methods for better readability, replaces deprecated
Collectors.toList() with modern toList(), and improves set sorting logic.
Removes unused GraphQL query file and simplifies UI by removing redundant
match status indicators while adding Material Icons support.